Implement using the system.property to set a bot token for Discord Integration

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,19 @@
-modName = MyMod
+modName = Taos 1.12 Mixins
 
 # This is a case-sensitive string to identify your mod. Convention is to use lower case.
-modId = mymodid
+modId = taosmixins
 
-modGroup = com.myname.mymodid
+modGroup = be.alessian.taosmixins
 
 # Version of your mod.
 # This field can be left empty if you want your mod's version to be determined by the latest git tag instead.
-modVersion = 1.0.0
+modVersion = 0.1.0
 
 # Whether to use the old jar naming structure (modid-mcversion-version) instead of the new version (modid-version)
 includeMCVersionJar = false
 
 # The name of your jar when you produce builds, not including any versioning info
-modArchivesBaseName = mymodid
+modArchivesBaseName = taosmixins
 
 # Will update your build.gradle automatically whenever an update is available
 autoUpdateBuildScript = false
@@ -33,7 +33,7 @@ developmentEnvironmentUserName = Developer
 enableModernJavaSyntax = true
 
 # Generate a class with String fields for the mod id, name and version named with the fields below
-generateGradleTokenClass = com.myname.mymodid.Tags
+generateGradleTokenClass = be.alessian.taosmixins.Tags
 gradleTokenModId = MODID
 gradleTokenModName = MODNAME
 gradleTokenVersion = VERSION
@@ -52,14 +52,14 @@ useSrcApiPath = false
 accessTransformersFile =
 
 # Provides setup for Mixins if enabled. If you don't know what mixins are: Keep it disabled!
-usesMixins = false
+usesMixins = true
 # Specify the package that contains all of your Mixins. You may only place Mixins in this package or the build will fail!
-mixinsPackage =
+mixinsPackage = mixin
 # Automatically generates a mixin config json if enabled, with the name mixins.modid.json
 generateMixinConfig = true
 # Specify the core mod entry class if you use a core mod. This class must implement IFMLLoadingPlugin!
 # Example value: coreModClass = asm.FMLPlugin + modGroup = com.myname.mymodid -> com.myname.mymodid.asm.FMLPlugin
-coreModClass =
+coreModClass = core.TaosMixinsCore
 # If your project is only a consolidation of mixins or a core mod and does NOT contain a 'normal' mod (meaning that
 # there is no class annotated with @Mod) you want this to be true. When in doubt: leave it on false!
 containsMixinsAndOrCoreModOnly = false
@@ -111,7 +111,7 @@ modrinthProjectId =
 #       type can be one of [project, version],
 #       and the name is the Modrinth project or version slug/id of the other mod.
 # Example: required-project:jei;optional-project:top;incompatible-project:gregtech
-modrinthRelations =
+modrinthRelations = required-project:dcintegration
 
 
 # Publishing to CurseForge requires you to set the CURSEFORGE_API_KEY environment variable to one of your CurseForge API tokens.
@@ -126,12 +126,12 @@ curseForgeProjectId =
 # Where type can be one of [requiredDependency, embeddedLibrary, optionalDependency, tool, incompatible],
 #       and the name is the CurseForge project slug of the other mod.
 # Example: requiredDependency:railcraft;embeddedLibrary:cofhlib;incompatible:buildcraft
-curseForgeRelations =
+curseForgeRelations = requiredDependency:dcintegration
 
 # This project's release type on CurseForge and/or Modrinth
 # Alternatively this can be set with the 'RELEASE_TYPE' environment variable.
 # Allowed types: release, beta, alpha
-releaseType = release
+releaseType = beta
 
 # Generate a default changelog for releases. Requires git to be installed, as it uses it to generate a changelog of
 # commits since the last tagged release.
@@ -159,7 +159,7 @@ mavenArtifactGroup =
 # By default this will use the files found here: https://github.com/GregTechCEu/Buildscripts/tree/master/spotless
 # to format your code. However, you can create your own version of these files and place them in your project's
 # root directory to apply your own formatting options instead.
-enableSpotless = false
+enableSpotless = true
 
 # Enable JUnit testing platform used for testing your code.
 # Uses JUnit 5. See guide and documentation here: https://junit.org/junit5/docs/current/user-guide/
