AHHHHHH It's still not working but I need it public so people can look at it
Signed-off-by: Alessian Dormal <alessian@alessian.be>

--- a/repositories.gradle
+++ b/repositories.gradle
@@ -1,5 +1,14 @@
 // Add any additional repositories for your dependencies here
 
 repositories {
-
+    maven { // Mixin Maven Fix
+        url = 'https://repo.spongepowered.org/maven'
+    }
+    maven {  // Autoconfig and Autosave
+        name 'Mod Maven'
+        url 'https://modmaven.dev'
+    }
+    maven {
+        url 'https://maven.cleanroommc.com'
+    }
 }
