--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -39,4 +39,7 @@
  */
 dependencies {
     compileOnly(rfg.deobf("curse.maven:dcintegration-324952:4034508"))
+    implementation ('com.cleanroommc:configanytime:3.0') {
+        transitive = false
+    }
 }
