--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-modName = Taos 1.12 Mixins
+modName = Taos Mixins
 
 # This is a case-sensitive string to identify your mod. Convention is to use lower case.
 modId = taosmixins
@@ -7,7 +7,7 @@ modGroup = be.alessian.taosmixins
 
 # Version of your mod.
 # This field can be left empty if you want your mod's version to be determined by the latest git tag instead.
-modVersion = 0.1.0
+modVersion = 0.1.1
 
 # Whether to use the old jar naming structure (modid-mcversion-version) instead of the new version (modid-version)
 includeMCVersionJar = false
@@ -92,7 +92,7 @@ relocateShadowedDependencies = true
 
 # Separate run directories into "run/client" for runClient task, and "run/server" for runServer task.
 # Useful for debugging a server and client simultaneously. If not enabled, it will be in the standard location "run/"
-separateRunDirectories = false
+separateRunDirectories = true
 
 # The display name format of versions published to Curse and Modrinth. $MOD_NAME and $VERSION are available variables.
 # Default: $MOD_NAME \u2212 $VERSION. \u2212 is the minus character which looks much better than the hyphen minus on Curse.
