Improve Naming scheme and README
Signed-off-by: Alessian Dormal <alessian@alessian.be>

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
-modName = Taos Mixins
+modName = Tao Tweaks
 
 # This is a case-sensitive string to identify your mod. Convention is to use lower case.
-modId = taosmixins
+modId = taotweaks
 
-modGroup = be.alessian.taosmixins
+modGroup = be.alessian.taotweaks
 
 # Version of your mod.
 # This field can be left empty if you want your mod's version to be determined by the latest git tag instead.
@@ -13,7 +13,7 @@ modVersion = 0.1.1
 includeMCVersionJar = false
 
 # The name of your jar when you produce builds, not including any versioning info
-modArchivesBaseName = taosmixins
+modArchivesBaseName = taotweaks
 
 # Will update your build.gradle automatically whenever an update is available
 autoUpdateBuildScript = false
@@ -33,7 +33,7 @@ developmentEnvironmentUserName = Developer
 enableModernJavaSyntax = true
 
 # Generate a class with String fields for the mod id, name and version named with the fields below
-generateGradleTokenClass = be.alessian.taosmixins.Tags
+generateGradleTokenClass = be.alessian.taotweaks.Tags
 gradleTokenModId = MODID
 gradleTokenModName = MODNAME
 gradleTokenVersion = VERSION
@@ -59,7 +59,7 @@ mixinsPackage = mixin
 generateMixinConfig = true
 # Specify the core mod entry class if you use a core mod. This class must implement IFMLLoadingPlugin!
 # Example value: coreModClass = asm.FMLPlugin + modGroup = com.myname.mymodid -> com.myname.mymodid.asm.FMLPlugin
-coreModClass = core.TaosMixinsCore
+coreModClass = core.TaoTweaksCore
 # If your project is only a consolidation of mixins or a core mod and does NOT contain a 'normal' mod (meaning that
 # there is no class annotated with @Mod) you want this to be true. When in doubt: leave it on false!
 containsMixinsAndOrCoreModOnly = false
@@ -111,7 +111,7 @@ modrinthProjectId =
 #       type can be one of [project, version],
 #       and the name is the Modrinth project or version slug/id of the other mod.
 # Example: required-project:jei;optional-project:top;incompatible-project:gregtech
-modrinthRelations = required-project:dcintegration
+modrinthRelations =
 
 
 # Publishing to CurseForge requires you to set the CURSEFORGE_API_KEY environment variable to one of your CurseForge API tokens.
@@ -126,7 +126,7 @@ curseForgeProjectId =
 # Where type can be one of [requiredDependency, embeddedLibrary, optionalDependency, tool, incompatible],
 #       and the name is the CurseForge project slug of the other mod.
 # Example: requiredDependency:railcraft;embeddedLibrary:cofhlib;incompatible:buildcraft
-curseForgeRelations = requiredDependency:dcintegration
+curseForgeRelations =
 
 # This project's release type on CurseForge and/or Modrinth
 # Alternatively this can be set with the 'RELEASE_TYPE' environment variable.
