--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ modGroup = be.alessian.taotweaks
 
 # Version of your mod.
 # This field can be left empty if you want your mod's version to be determined by the latest git tag instead.
-modVersion = 0.1.1
+modVersion = 0.1.2
 
 # Whether to use the old jar naming structure (modid-mcversion-version) instead of the new version (modid-version)
 includeMCVersionJar = false
@@ -59,7 +59,7 @@ mixinsPackage = mixin
 generateMixinConfig = true
 # Specify the core mod entry class if you use a core mod. This class must implement IFMLLoadingPlugin!
 # Example value: coreModClass = asm.FMLPlugin + modGroup = com.myname.mymodid -> com.myname.mymodid.asm.FMLPlugin
-coreModClass = core.TaoTweaksCore
+coreModClass = core.TweaksCore
 # If your project is only a consolidation of mixins or a core mod and does NOT contain a 'normal' mod (meaning that
 # there is no class annotated with @Mod) you want this to be true. When in doubt: leave it on false!
 containsMixinsAndOrCoreModOnly = false
